deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinelx-svc
  namespace: sentinelx
  labels:
    app: sentinelx
    app.kubernetes.io/name: sentinelx
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: sentinelx
